examples/invalid/12_local_function_forward_reference.lane
module Examples.Invalid12
// invalid: local named functions are sequential and cannot be called before declaration
pub fn bad(value : Int) -> Int {
  helper(value)
  fn helper(x : Int) -> Int {
    x
  }
}
